--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 h1 {
@@ -71,6 +71,8 @@ code {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 @media (prefers-color-scheme: light) {
